<resources>
    <string name="app_name">Income Expenses Tracker</string>
    <string name="tv_title">Dashboard</string>
    <string name="tv_income">Today\'s Income</string>
    <string name="tv_income_value">0</string>
    <string name="tv_expenses">Today\'s Expenses</string>
    <string name="tv_expenses_value">0</string>
    <string name="tv_balance">Today\'s Balance</string>
    <string name="tv_balance_value">0</string>
    <string name="tv_details">View Today\'s Details</string>
    <string name="btn_enter">Enter Income/ Expenses</string>
    <string name="btn_report">Date Wise Report</string>
    <string name="drop_table_if_exists">DROP TABLE IF EXISTS</string>
    <string name="et_date">Enter Date\n</string>
    <string name="et_amount">Enter Amount</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_date">Date: %s</string>
    <string name="tv_income_display">Income: %d</string>
    <string name="tv_expenses_display">Expenses: %d</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="tv_between">Between:</string>
    <string name="tv_and">and</string>
</resources>