<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/et_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:minWidth="488dp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/s_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/title"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/et_amount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:minWidth="488dp"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_update"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_delete"/>

</LinearLayout>