<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:id="@+id/tv_title"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF69B4"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/tv_income"/>

            <TextView
                android:id="@+id/tv_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_income_value"
                android:textColor="#311B92"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FA8072"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/tv_expenses"/>

            <TextView
                android:id="@+id/tv_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_expenses_value"
                android:textColor="#4E342E"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/linear2"
        android:layout_margin="10dp"
        android:layout_below="@+id/linear1"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F4A460"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/tv_balance"/>

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_balance_value"
                android:textColor="#311B92"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DA70D6"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/tv_details"
                android:padding="1dp"
                android:lines="2"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_centerInParent="true"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#9370DB"
        android:padding="20dp"
        android:text="@string/btn_enter"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_report"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_enter"
        android:layout_centerInParent="true"
        android:background="#4682B4"
        android:text="@string/btn_report"
        android:textColor="#000000"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_marginVertical="20dp"
        />

</RelativeLayout>