<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_layout">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_date"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_income_display"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/tv_date"
        android:textColor="#3F51B5"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_expenses_display"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/tv_date"
        android:textColor="#FF4081"
        android:visibility="gone"/>

</RelativeLayout>