<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_between"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_between"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_between"
        android:hint="@string/et_date"
        android:inputType="date"
        android:textSize="16sp"
        android:importantForAutofill="no"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_and"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/et_date1"/>

    <EditText
        android:id="@+id/et_date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_date"
        android:textSize="16sp"
        android:inputType="date"
        android:layout_toEndOf="@+id/tv_and"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:layout_below="@+id/tv_between"
        android:layout_centerHorizontal="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_submit"
        android:scrollbars="vertical"/>
</RelativeLayout>